syntax = "proto3";
package com.crd.common.grpc;
//import "google/protobuf/any.proto";

message CreateOrderRequest {
  string type = 1;
  string currency = 2;
  string index = 3;
  string maturity = 4;
  string notional = 5;
  string trader = 6;
}

message CreateOrderResponse {
  string tradeId = 1;
}

message GetTradeRequest {
  string tradeId = 1;
}

message GetTradeResponse {
  string name = 1;
  string description = 2;
  double price = 3;
  string userId = 4;
}

message GetVersionRequest {

}

message GetVersionResponse {
    string version = 1;
}

message ErrorDetail {
  // Error code
  string errorCode = 1;
  //Error message
  string message = 2;
  // Additional metadata associated with the Error
  map<string, string> metadata = 3;
}
